tests/non-exhaustive-binding/out.txt
error: non-exhaustive binding
  ┌─ err.sml:1:5
  │
1 │ val 3 = 1 + 2
  │     ^

typechecking failed
